# University-Codes

./: README.md
1-1. Fundimentals of Programming/: test.cpp
1-2. Fundimentals of Algorithm/: biy daalt1 1.fprg  biy daalt1 10.fprg  biy daalt1 11.fprg  biy daalt1 12.fprg  biy daalt1 2.fprg  biy daalt1 3.fprg  biy daalt1 4.fprg  biy daalt1 5.fprg  biy daalt1 6.fprg  biy daalt1 7.fprg  biy daalt1 8.fprg  biy daalt1 9.fprg  biy daalt2 1.fprg  biy daalt2 10.fprg  biy daalt2 2.fprg  biy daalt2 3.fprg  biy daalt2 4.fprg  biy daalt2 5.fprg  biy daalt2 6.fprg  biy daalt2 7.fprg  biy daalt2 8.fprg  biy daalt2 9.fprg  biy daalt3 1.fprg  biy daalt3 2.fprg  biy daalt3 4.fprg  biy daalt3 5.fprg  biy daalt3 6.fprg  lab2-2.fprg  shalgalt a-1.fprg  shalgalt a-2.fprg  shalgalt a-3.fprg  shalgalt a-4.fprg  shalgalt b-1.fprg  shalgalt b-2 ticket increase.fprg  shalgalt b-3 orange.fprg  shalgalt b-4 guessednumber.fprg  shalgalt b-5 ajilchin.fprg  week-7.fprg  week2-1.fprg  week2-3.fprg  (+6 more)
2-1. Artificial Intelligence/: HOU B221960002 real.ipynb
2-1. Data structures and algorithms/: biydaalt1.txt  biydaalt2.txt  lab (2) best.txt  lab (6) HeapTester.txt  lab (7).txt  lab 3 ArrayStack.txt  lab 3 MyStack.txt  lab 3 Stack.txt  lab(1) improved.txt  lab(4.1).txt  lab(5) Best.txt  lab(6) MinimumHeap.txt
2-2. Data mining and machine learning/: Data mining and machine learning Examples.ipynb
3-1. Algorithm Analysis and Design/Lab/Lab 8/: 8-1.py  8-2.cpp  8-3.py  CMakeLists.txt  test.cpp
3-1. Big Data Analysis/: 30 Score.txt  B221960002_Ih_Ogogdol_lab9.ipynb  BDA Biy Daalt.ipynb  (+6 more)
(+474 files in other folders)
